Closed Bug 1588084 Opened 6 years ago Closed 6 years ago

Crash in [@ -[nsTouchBar updatePopover:input:]]

Categories

(Core :: Widget: Cocoa, defect)

Desktop
macOS
defect
Not set
critical
Points:
1

Tracking

()

RESOLVED FIXED
mozilla71
Iteration:
71.3 - Sept 30 - Oct 13
Tracking Status
firefox-esr60 --- unaffected
firefox-esr68 --- unaffected
firefox67 --- unaffected
firefox68 --- unaffected
firefox69 --- unaffected
firefox70 --- unaffected
firefox71 --- fixed

People

(Reporter: marcia, Assigned: bugzilla)

References

(Regression)

Details

(Keywords: crash, regression)

Crash Data

Attachments

(1 file)

This bug is for crash report bp-d25cc33b-9c43-46d2-b977-d0ff10191011.

Seen while running 20191011093010 on 10.15. Not sure of exact STR but I was hovering in the vicinity of the nightly icon in the dock when the crash occurred.

Looks as if Bug 1563349 recently landed, ni on :harry

Top 10 frames of crashing thread:

0 XUL -[nsTouchBar updatePopover:input:] widget/cocoa/nsTouchBar.mm:366
1 XUL -[nsTouchBar touchBar:makeItemForIdentifier:] widget/cocoa/nsTouchBar.mm:179
2 AppKit AppKit@0x144d8e 
3 AppKit AppKit@0x41314 
4 AppKit AppKit@0x1449a2 
5 XUL -[nsTouchBar releaseJSObjects] widget/cocoa/nsTouchBar.mm:505
6 XUL nsCocoaWindow::DestroyNativeWindow widget/cocoa/nsCocoaWindow.mm:171
7 XUL nsCocoaWindow::~nsCocoaWindow widget/cocoa/nsCocoaWindow.mm:205
8 XUL nsCocoaWindow::~nsCocoaWindow widget/cocoa/nsCocoaWindow.mm:182
9 XUL <name omitted> widget/cocoa/nsCocoaWindow.mm:119

Flags: needinfo?(htwyford)

It looks like the search popover is trying to update itself during a window shutdown and mTouchBarHelper is null when isUrlbarFocused is called. I've added null-checking for both mTouchBarHelper (in updatePopover) and the window (on the JS side).

Flags: needinfo?(htwyford)
Pushed by htwyford@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/6f13ec193094 Add null-checking to isUrlbarFocused to avoid crashes on window shutdown. r=mikedeboer
Regressed by: 1563350
Iteration: --- → 71.3 - Sept 30 - Oct 13
Points: --- → 1
Status: NEW → RESOLVED
Closed: 6 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla71
Assignee: nobody → htwyford
Has Regression Range: --- → yes
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: