Bug 1588084 - Add null-checking to isUrlbarFocused to avoid crashes on window shutdown. r=mikedeboer

Differential Revision: https://phabricator.services.mozilla.com/D48966